# doc-intel

./: .gitignore  README.md  development-plan.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test.db-shm  test.db-wal  test_e2e.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_design_v2_compliance.py  80840f9d0efa_s2a_processing_results_annotations_.py  a3c7d9e2b4f5_s5_api_publish.py  b7e3a92f5d10_s6_processing_results_upsert_dedup.py  cc4a010e73f1_s1_projects_documents.py  d8d98191e643_add_usage_records.py  d9e2957d1511_s0_users_workspaces_workspace_members.py  e1b5c0d3f7a4_s3_prompt_versions.py  e2601813cfca_add_prompt_versions.py  f2a8d4e6c5b1_s4_evaluations.py
backend/app/: main.py
backend/app/abstractions/: __init__.py  auth.py  storage.py  task_runner.py
backend/app/api/v1/: annotations.py  api_defs.py  api_keys.py  api_publish.py  auth.py  conversations.py  correction.py  documents.py  engine.py  evaluations.py  extract.py  extract_public.py  predict.py  projects.py  prompts.py  router.py  templates.py  usage.py  workspaces.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  security.py
backend/app/engine/: __init__.py  mock.json  prompt.py  scoring.py  utils.py
backend/app/models/: __init__.py  annotation.py  annotation_revision.py  api_definition.py  api_key.py  base.py  conversation.py  document.py  evaluation_field_result.py  evaluation_run.py  processing_result.py  project.py  prompt_version.py  usage_record.py  user.py  workspace.py  workspace_member.py
backend/app/processors/: __init__.py  base.py  factory.py  gemini_processor.py  mock_processor.py  openai_processor.py  piaozone_processor.py  piaozone_token.py
backend/app/schemas/: __init__.py  annotation.py  api_definition.py  api_key.py  auth.py  common.py  document.py  evaluation.py  extract.py  predict.py  project.py  prompt_version.py  workspace.py
backend/app/services/: annotation_service.py  api_definition_service.py  api_key_service.py  api_publish_service.py  auth_service.py  correction_service.py  document_service.py  evaluation_excel.py  evaluation_service.py  extract_service.py  predict.py  project_service.py  prompt_optimizer.py  prompt_service.py  schema_generator.py  storage.py  template_service.py  workspace_service.py
backend/app/templates/: builtin.py
backend/data/: apianything.db-shm  apianything.db-wal
backend/scripts/: dedup_processing_results_per_processor.py
backend/tests/: conftest.py  test_annotation_api.py  test_annotation_model.py  test_annotation_revision_model.py  test_api_key_model.py  test_api_publish_api.py  test_api_publish_service.py  test_auth.py  test_batch_predict.py  test_correction_api.py  test_correction_service.py  test_database.py  test_document_api.py  test_document_model.py  test_engine_analyzer.py  test_engine_info.py  test_engine_mock.py  test_engine_processors.py  test_engine_revise.py  test_evaluation_models.py  test_evaluation_service.py  test_evaluations_api.py  test_extract_predict_attribution.py  test_extract_public.py  test_models.py  test_next_unreviewed.py  test_predict_endpoint.py  test_predict_helpers.py  test_predict_resolve_prompt.py  test_processing_result_model.py  test_project_api.py  test_project_model.py  test_prompt_service.py  test_prompt_version_model.py  test_prompts_api.py  test_scoring.py  test_security.py  test_settings.py  test_storage.py  test_templates.py  (+1 more)
(+159 files in other folders)
