[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-intel-backend"
version = "0.1.0"
description = "doc-intel — 文档智能提取自助平台"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",    # multipart/form-data 文件上传

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",

    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # HTTP client (for file_url fetching — stdlib urllib used in prototype)
    # "httpx>=0.27.0",             # uncomment when needed

    # AI processors (install as needed)
    # "google-generativeai>=0.8.0",
    # "openai>=1.50.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",               # for TestClient
    "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
