[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-intel-backend"
version = "0.1.0"
description = "doc-intel — 文档智能提取自助平台"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",

    # Async DB
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",

    # Config & validation
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Auth
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",

    # ML backend HTTP
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
